# shapes

./: .gitignore  CMakeLists.txt  README.md  config.txt
cmake/: dependencies.cmake
include/game/game/: game.h
include/shapes/shapes/: bound_box.h  circle.h  rectangle.h  shapes.h
include/window/window/: window.h
src/: bound_box.cpp  circle.cpp  game.cpp  main.cpp  rectangle.cpp  shapes.cpp  window.cpp
